kubernetes/demo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mynginx
  labels:
    app: nginx
spec:
  containers:
  - name: mynginx
    image: nginx
