kubernetes/demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    tier: frontend
  name: myservice
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
