kubernetes/demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: mynginx
spec:
  rules:
  - host: mysvc.dom
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mynginx 
            port:
              number: 80
